2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES.in: Regenerated.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove improper use of program_transform_name on pkglibrootdir.

	* configure.ac (pkglibrootdir): Removed.
	(grub-mkimage): Replace PKGLIBROOTDIR with PKGLIBDIR.
	* util/grub-mkimage.c: Likewise.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (grub_print_message_indented_real): Fix a
	warning.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Use file identifier if no UUID is available
	or user explicitly prompted for it.

2012-02-27  Navdeep Parhar <nparhar@gmail.com>

	* grub-core/loader/i386/bsd.c (freebsd_zfsguid): New variable.
	(freebsd_get_zfs): New function.
	(grub_freebsd_boot): Pass zfs UUID.
	(grub_cmd_freebsd): Set zfs UUID.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common (platformdir): Base on pkglibdir and not
	pkglibrootdir.

2012-02-27  Mike Gilbert  <floppym@gentoo.org>

	Add configure flag to control libzfs integration.

	* configure.ac: Add AC_ARG_ENABLE(libzfs ...) and associated logic.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (insert_array): Choose the smallest
	device.
	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Reject too
	small devices.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove grub_{modname}_init and grub_{modname}_fini. They should never
	be used directly if it's really a module and GRUB_MOD_INIT shouldn't
	be used on non-modules.

	* grub-core/commands/boot.c (GRUB_MOD_INIT) [LOONGSON || QEMU_MIPS]:
	Rename to grub_boot_init.
	(GRUB_MOD_FINI) [LOONGSON || QEMU_MIPS]: Rename to grub_boot_fini.
	* grub-core/commands/keylayouts.c (GRUB_MOD_INIT)
	[LOONGSON || QEMU_MIPS]: Rename to grub_keylayouts_init.
	(GRUB_MOD_FINI) [LOONGSON || QEMU_MIPS]: Rename to grub_keylayouts_fini.
	* grub-core/font/font_cmd.c (GRUB_MOD_INIT)