@@ -31,18 +31,18 @@ PACKAGE_TARNAME=@PACKAGE_TARNAME@
 PACKAGE_VERSION=@PACKAGE_VERSION@
 datadir="@datadir@"
 if [ "x$pkgdatadir" = x ]; then
-    pkgdatadir="${datadir}/@PACKAGE_TARNAME@"
+    pkgdatadir="${datadir}/@PACKAGE@"
 fi
 pkglib_DATA="moddep.lst command.lst fs.lst partmap.lst parttool.lst handler.lst video.lst crypto.lst terminal.lst"
 
 self=`basename $0`
 
-multiboot_dir="${libdir}/${PACKAGE_TARNAME}/i386-multiboot"
-coreboot_dir="${libdir}/${PACKAGE_TARNAME}/i386-coreboot"
-qemu_dir="${libdir}/${PACKAGE_TARNAME}/i386-qemu"
-pc_dir="${libdir}/${PACKAGE_TARNAME}/i386-pc"
-efi32_dir="${libdir}/${PACKAGE_TARNAME}/i386-efi"
-efi64_dir="${libdir}/${PACKAGE_TARNAME}/x86_64-efi"
+multiboot_dir="${libdir}/@PACKAGE@/i386-multiboot"
+coreboot_dir="${libdir}/@PACKAGE@/i386-coreboot"
+qemu_dir="${libdir}/@PACKAGE@/i386-qemu"
+pc_dir="${libdir}/@PACKAGE@/i386-pc"
+efi32_dir="${libdir}/@PACKAGE@/i386-efi"
+efi64_dir="${libdir}/@PACKAGE@/x86_64-efi"
 rom_directory=
 override_dir=
 grub_mkimage="${bindir}/`echo grub-mkimage | sed ${transform}`"
