@@ -29,11 +29,11 @@ PACKAGE_TARNAME=@PACKAGE_TARNAME@
 PACKAGE_VERSION=@PACKAGE_VERSION@
 target_cpu=@target_cpu@
 platform=@platform@
-pkglibdir="${libdir}/${PACKAGE_TARNAME}/${target_cpu}-${platform}"
+pkglibdir="${libdir}/@PACKAGE@/${target_cpu}-${platform}"
 datarootdir="@datarootdir@"
 datadir="@datadir@"
 if [ "x$pkgdatadir" = x ]; then
-    pkgdatadir="${datadir}/@PACKAGE_TARNAME@"
+    pkgdatadir="${datadir}/@PACKAGE@"
 fi
 
 self=`basename $0`
